<resources>
    <string name="app_name" translatable="false">Soundwave</string>
    <string name="affix_Hz" translatable="false">Hz</string>
    <string name="affix_dB" translatable="false">dB</string>
    <string name="affix_percent" translatable="false">%</string>
    <string name="affix_milliseconds" translatable="false">ms</string>
    <string name="unit_millisecond" translatable="false">[ms]</string>
    <string name="unit_percent" translatable="false">[%]</string>
    <string name="unit_megabyte" translatable="false">MB</string>
    <string name="my_tones_header">My tones</string>
    <string name="tone_streaming_header">Tone streaming</string>
    <string name="tone_creator_header">Tone creator</string>
    <string name="tone_mixer_header">Tone mixer</string>
    <string name="tone_details_header">Tone details</string>
    <string name="control_panel_header">Control panel</string>
    <string name="create_sound_header">Create sound</string>
    <string name="sound_details_header">Sound details</string>
    <string name="settings_header">Settings</string>
    <string name="account_header">Account</string>
    <string name="settings_account_header">Account</string>
    <string name="settings_language_header">Language</string>
    <string name="settings_storage_header">Storage</string>
    <string name="settings_storage_tones_header">Tones</string>
    <string name="settings_storage_music_header">Music</string>
    <string name="settings_storage_download_directory">Download directory</string>
    <string name="settings_storage_downloaded_size">Disk usage</string>
    <string name="settings_storage_tones_database_number">In app tones</string>
    <string name="settings_storage_music_database_number">In app music</string>
    <string name="overtones_header">Overtones</string>
    <string name="sample_rate_header">Sample rate</string>
    <string name="duration_header">Duration</string>
    <string name="frequency_header">Frequency</string>
    <string name="envelope_header">Envelope</string>
    <string name="envelope_attack_header">Attack</string>
    <string name="envelope_decay_header">Decay</string>
    <string name="envelope_sustain_header">Sustain</string>
    <string name="envelope_sustain_level_header">Sustain level</string>
    <string name="envelope_sustain_duration_header">Sustain duration</string>
    <string name="envelope_release_header">Release</string>
    <string name="timbre_header">Timbre</string>
    <string name="tones_number_header">Tones number</string>
    <string name="tone_volume_header">Volume</string>
    <string name="tone_mixer_track_1">TRACK 1</string>
    <string name="tone_mixer_track_2">TRACK 2</string>
    <string name="tone_mixer_track_3">TRACK 3</string>
    <string name="tone_mixer_track_4">TRACK 4</string>
    <string name="tone_mixer_track_5">TRACK 5</string>
    <string name="load_sound_btn">Load sound</string>
    <string name="generate_btn">Generate</string>
    <string name="play_btn">Play</string>
    <string name="stop_btn">Stop</string>
    <string name="save_btn">Save</string>
    <string name="saved_btn">Saved</string>
    <string name="reset_btn">Reset</string>
    <string name="more_info_btn">More…</string>
    <string name="less_info_btn">Less…</string>
    <string name="add_tone_btn">Add tone</string>
    <string name="delete_all_tones_btn">Delete all in app tones</string>
    <string name="delete_all_music_btn">Delete all in app music</string>
    <string name="percent_unit" translatable="false">%</string>
    <string name="second_unit" translatable="false">s</string>
    <string name="millisecond_unit" translatable="false">ms</string>
    <string name="hertz_unit" translatable="false">Hz</string>
    <string name="bottom_nav_tone_creator">Creator</string>
    <string name="bottom_nav_tone_mixer">Mixer</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_dynamic_playback">Generator</string>
    <string name="alert_dialog_tone_creator_generate_message">Do you want to generate tone?</string>
    <string name="alert_dialog_tone_creator_generate_positive">YES</string>
    <string name="alert_dialog_tone_creator_generate_negative">NO</string>
    <string name="alert_dialog_tone_creator_save_message">Give your tone a name…</string>
    <string name="alert_dialog_tone_creator_save_positive">SAVE</string>
    <string name="alert_dialog_tone_creator_save_negative">Cancel</string>
    <string name="alert_dialog_tone_creator_reset_message">Do you want to reset tone creator?</string>
    <string name="alert_dialog_tone_creator_reset_positive">YES</string>
    <string name="alert_dialog_tone_creator_reset_negative">NO</string>
    <string name="alert_dialog_tone_creator_exit_message">You have unsaved changes. Do you want to leave without saving?</string>
    <string name="alert_dialog_tone_creator_exit_positive">YES</string>
    <string name="alert_dialog_tone_creator_exit_negative">NO</string>
    <string name="alert_dialog_tone_mixer_generate_message">Do you want to generate music?</string>
    <string name="alert_dialog_tone_mixer_generate_positive">YES</string>
    <string name="alert_dialog_tone_mixer_generate_negative">NO</string>
    <string name="alert_dialog_tone_mixer_save_message">Give your music a name…</string>
    <string name="alert_dialog_tone_mixer_save_positive">SAVE</string>
    <string name="alert_dialog_tone_mixer_save_negative">Cancel</string>
    <string name="alert_dialog_tone_mixer_reset_message">Do you want to reset tones mixer?</string>
    <string name="alert_dialog_tone_mixer_reset_positive">YES</string>
    <string name="alert_dialog_tone_mixer_reset_negative">NO</string>
    <string name="alert_dialog_tone_mixer_exit_message">You have unsaved changes. Do you want to leave without saving?</string>
    <string name="alert_dialog_tone_mixer_exit_positive">YES</string>
    <string name="alert_dialog_tone_mixer_exit_negative">NO</string>
    <string name="alert_dialog_homepage_delete_tone_message">Do you want to delete tone?</string>
    <string name="alert_dialog_homepage_delete_tone_positive">YES</string>
    <string name="alert_dialog_homepage_delete_tone_negative">NO</string>
    <string name="alert_dialog_homepage_delete_tone_success">Tone deleted</string>
    <string name="alert_dialog_homepage_delete_tone_fail">Deletion failed</string>
    <string name="alert_dialog_homepage_delete_music_message">Do you want to delete music?</string>
    <string name="alert_dialog_homepage_delete_music_positive">YES</string>
    <string name="alert_dialog_homepage_delete_music_negative">NO</string>
    <string name="alert_dialog_homepage_delete_music_success">Music deleted</string>
    <string name="alert_dialog_homepage_delete_music_fail">Deletion failed</string>
    <string name="alert_dialog_homepage_rename_tone_message">Give your tone a new name…</string>
    <string name="alert_dialog_homepage_rename_tone_positive">RENAME</string>
    <string name="alert_dialog_homepage_rename_tone_negative">Cancel</string>
    <string name="alert_dialog_homepage_rename_tone_success">Tone renamed</string>
    <string name="alert_dialog_homepage_rename_tone_fail">Renaming failed</string>
    <string name="alert_dialog_homepage_rename_music_message">Give your music a new name…</string>
    <string name="alert_dialog_homepage_rename_music_positive">RENAME</string>
    <string name="alert_dialog_homepage_rename_music_negative">Cancel</string>
    <string name="alert_dialog_homepage_rename_music_success">Music renamed</string>
    <string name="alert_dialog_homepage_rename_music_fail">Renaming failed</string>
    <string name="alert_dialog_homepage_download_tone_message">Do you want to download this tone?</string>
    <string name="alert_dialog_homepage_download_tone_positive">YES</string>
    <string name="alert_dialog_homepage_download_tone_negative">NO</string>
    <string name="alert_dialog_homepage_download_tone_success">Tone downloaded to:</string>
    <string name="alert_dialog_homepage_download_tone_fail">Downloading failed</string>
    <string name="alert_dialog_homepage_download_music_message">Do you want to download this music?</string>
    <string name="alert_dialog_homepage_download_music_positive">YES</string>
    <string name="alert_dialog_homepage_download_music_negative">NO</string>
    <string name="alert_dialog_homepage_download_music_success">Music downloaded to:</string>
    <string name="alert_dialog_homepage_download_music_fail">Downloading failed</string>
    <string name="alert_dialog_settings_delete_database_tones_message">Do you want to delete all in app tones?</string>
    <string name="alert_dialog_settings_delete_database_tones_positive">YES</string>
    <string name="alert_dialog_settings_delete_database_tones_negative">NO</string>
    <string name="alert_dialog_settings_delete_database_tones_success">Tones deleted</string>
    <string name="alert_dialog_settings_delete_database_tones_fail">Deletion failed</string>
    <string name="alert_dialog_settings_delete_database_music_message">Do you want to delete all in app music?</string>
    <string name="alert_dialog_settings_delete_database_music_positive">YES</string>
    <string name="alert_dialog_settings_delete_database_music_negative">NO</string>
    <string name="alert_dialog_settings_delete_database_music_success">Music deleted</string>
    <string name="alert_dialog_settings_delete_database_music_fail">Deletion failed</string>
    <string name="alert_dialog_settings_language_message">Select language</string>
    <string name="alert_dialog_settings_language_negative">Cancel</string>
    <string name="error_msg_filepath_to_download_tones_fail">Filepath to download tones error</string>
    <string name="error_msg_filepath_to_download_music_fail">Filepath to download music error</string>
    <string name="error_msg_filepath_to_save_samples_fail">Filepath to save audio samples error</string>
    <string name="error_msg_empty_name">Name cannot be empty</string>
    <string name="error_msg_empty_tones">No tones found</string>
    <string name="error_loading_tone">Tone cannot be loaded</string>
    <string name="error_generating_tone">Tone cannot be generated</string>
    <string name="error_generating_music">Music cannot be generated</string>
    <string name="error_playing_tone">Tone cannot be played</string>
    <string name="error_playing_music">Music cannot be played</string>
    <string name="msg_empty_tones">Create your first tone in Tone Creator!</string>
    <string name="msg_empty_music">Create your first music in Tones Mixer!</string>
    <string name="msg_stream_frequency_to_pick">Pick sound frequency to stream</string>
    <string name="msg_stream_to_play">Tap the start button below to stream sound</string>
    <string name="msg_stream_to_stop">Tap the stop button below to stop streaming</string>
    <string name="toast_language_not_supported">Language not supported yet</string>
    <string-array name="playback_modes_array">
        <item>Static</item>
        <item>Stream</item>
    </string-array>
    <string-array name="sample_rates_array">
        <item>44.1kHz</item>
        <item>48kHz</item>
        <item>96kHz</item>
        <item>192kHz</item>
    </string-array>
    <string-array name="envelope_presets_array">
        <item>Flat</item>
        <item>Piano</item>
        <item>Guitar</item>
        <item>Flute</item>
        <item>Trumpet</item>
        <item>Custom</item>
    </string-array>
    <string name="desc_frequency_increment_btn">Increase frequency</string>
    <string name="desc_frequency_decrement_btn">Decrease frequency</string>
    <string name="desc_play_pause_tone_btn">Play/pause tone</string>
</resources>