<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tone_creator"
        android:icon="@drawable/ic_tone_creator"
        android:title="@string/bottom_nav_tone_creator" />
    <item
        android:id="@+id/tone_mixer"
        android:icon="@drawable/ic_tone_mixer"
        android:title="@string/bottom_nav_tone_mixer" />
    <item
        android:id="@+id/my_homepage"
        android:icon="@drawable/ic_home"
        android:title="@string/bottom_nav_home" />
    <item
        android:id="@+id/tone_streaming"
        android:icon="@drawable/ic_tone_streaming"
        android:title="@string/bottom_nav_dynamic_playback" />
    <item
        android:id="@+id/something"
        android:icon="@drawable/ic_play_note"
        android:title="...?" />
</menu>