<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_shadow_layout"
    tools:background="@color/dark_gray"
    tools:context=".view.ToneStreamingFragment">

    <ImageView
        android:id="@+id/tone_streaming_frequency_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@null"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:src="@drawable/ic_frequency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/frequency_header"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tone_streaming_frequency_icon"
        app:layout_constraintStart_toEndOf="@id/tone_streaming_frequency_icon"
        app:layout_constraintTop_toTopOf="@id/tone_streaming_frequency_icon" />

    <EditText
        android:id="@+id/tone_streaming_fundamental_frequency_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:inputType="numberSigned"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tone_streaming_frequency_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tone_streaming_frequency_icon"
        tools:text="500" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/hertz_unit"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tone_streaming_fundamental_frequency_input"
        app:layout_constraintStart_toEndOf="@id/tone_streaming_fundamental_frequency_input"
        app:layout_constraintTop_toTopOf="@id/tone_streaming_fundamental_frequency_input" />

    <NumberPicker
        android:id="@+id/tone_streaming_note_input"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="4dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/tone_streaming_fundamental_frequency_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tone_streaming_fundamental_frequency_input" />

    <SeekBar
        android:id="@+id/tone_streaming_fundamental_frequency_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:progress="50"
        android:progressTint="@color/app_yellow_gradient_start"
        android:thumb="@drawable/custom_seekbar_thumb"
        app:layout_constraintBottom_toBottomOf="@id/tone_streaming_frequency_decrement_btn"
        app:layout_constraintEnd_toStartOf="@id/tone_streaming_frequency_increment_btn"
        app:layout_constraintStart_toEndOf="@id/tone_streaming_frequency_decrement_btn"
        app:layout_constraintTop_toTopOf="@id/tone_streaming_frequency_decrement_btn" />

    <ImageButton
        android:id="@+id/tone_streaming_frequency_decrement_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/desc_frequency_decrement_btn"
        android:src="@drawable/btn_decrement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tone_streaming_fundamental_frequency_input" />

    <ImageButton
        android:id="@+id/tone_streaming_frequency_increment_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/desc_frequency_increment_btn"
        android:src="@drawable/btn_increment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tone_streaming_fundamental_frequency_input" />

    <ImageButton
        android:id="@+id/tone_streaming_play_stop_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/desc_play_pause_tone_btn"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_play_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>