<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tone_creator_custom_envelope_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fadingEdgeLength="16dp"
    android:requiresFadingEdge="horizontal"
    app:layout_constraintTop_toBottomOf="@id/tone_creator_envelope_preset_spinner"
    tools:background="@color/black">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingBottom="8dp"
        tools:ignore="VisualLintBounds">

        <!-- Attack -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/tone_creator_envelope_attack"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minWidth="48dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:text="100" />

            <TextView
                android:id="@+id/tone_creator_envelope_attack_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:ems="5"
                android:gravity="center"
                android:labelFor="@id/tone_creator_envelope_attack"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/envelope_attack_header"
                android:textAllCaps="true"
                android:textColor="@color/app_yellow"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/unit_millisecond"
                android:textColor="@color/app_yellow"
                android:textSize="13sp" />

        </LinearLayout>

        <!-- Decay -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/tone_creator_envelope_decay"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minWidth="48dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:text="250" />

            <TextView
                android:id="@+id/tone_creator_envelope_decay_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:ems="5"
                android:gravity="center"
                android:labelFor="@id/tone_creator_envelope_decay"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/envelope_decay_header"
                android:textAllCaps="true"
                android:textColor="@color/app_yellow"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/unit_millisecond"
                android:textColor="@color/app_yellow"
                android:textSize="13sp" />

        </LinearLayout>

        <!-- Sustain Level -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/tone_creator_envelope_sustain_level"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minWidth="48dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:text="40" />

            <TextView
                android:id="@+id/tone_creator_envelope_sustain_level_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:ems="5"
                android:gravity="center"
                android:labelFor="@id/tone_creator_envelope_sustain_level"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/envelope_sustain_level_header"
                android:textAllCaps="true"
                android:textColor="@color/app_yellow"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/unit_percent"
                android:textColor="@color/app_yellow"
                android:textSize="13sp" />

        </LinearLayout>

        <!-- Sustain Duration -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/tone_creator_envelope_sustain_duration"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minWidth="48dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:text="1000" />

            <TextView
                android:id="@+id/tone_creator_envelope_sustain_duration_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:ems="5"
                android:gravity="center"
                android:labelFor="@id/tone_creator_envelope_sustain_duration"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/envelope_sustain_duration_header"
                android:textAllCaps="true"
                android:textColor="@color/app_yellow"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/unit_millisecond"
                android:textColor="@color/app_yellow"
                android:textSize="13sp" />

        </LinearLayout>

        <!-- Release -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/tone_creator_envelope_release"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minWidth="48dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:text="200" />

            <TextView
                android:id="@+id/tone_creator_envelope_release_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:ems="5"
                android:gravity="center"
                android:labelFor="@id/tone_creator_envelope_release"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/envelope_release_header"
                android:textAllCaps="true"
                android:textColor="@color/app_yellow"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/unit_millisecond"
                android:textColor="@color/app_yellow"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

</HorizontalScrollView>